test/scc/pp/errors/037.a
037.t:1:2: error: unterminated #ifdef